// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal Full preview 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Full preview
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Modal__ModalBody-jsvBud hzGqsV"
            data-test="test"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="Modal__ModalWrapper-ioqsnS FaaEz"
              onScroll={[Function]}
              size="normal"
            >
              <div
                className="Modal__ModalWrapperContent-dXDxzA gTyJWw"
                size="normal"
              >
                <div
                  className="Modal__CloseContainer-ehEpyW cuWRmR"
                >
                  <button
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW"
                    data-test={undefined}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                    type="button"
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fvqkFf"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
                <div
                  className="ModalHeader__StyledModalHeader-hOPket gAJYCS"
                  data-test={undefined}
                >
                  <img
                    alt="Accommodation"
                    className="Illustration__StyledImage-dmuJKG jLclvk"
                    data-test={undefined}
                    size="small"
                    src="//images.kiwi.com/illustrations/0x90/Accommodation.png"
                    srcSet="//images.kiwi.com/illustrations/0x180/Accommodation.png 2x"
                  />
                  <div
                    className="ModalHeader__ModalTitle-deoNop cFDEl"
                  >
                    <h1
                      className="Heading__StyledHeading-gucmUp dqcIYA"
                      data-test={undefined}
                    >
                      Orbit design system
                    </h1>
                    <div
                      className="ModalHeader__ModalDescription-lepRjY gLQpOL"
                    >
                      <div
                        className="Text__StyledText-guhEiE giPtaX"
                        data-test={undefined}
                      >
                        Lorem ispum dolor sit amet
                      </div>
                    </div>
                  </div>
                  <div
                    className="ModalHeader__MobileHeader-hyztNg htMJkr"
                  >
                    Orbit design system
                  </div>
                </div>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <div
                  className="ModalFooter__StyledModalFooter-heDwTy kuRjye"
                  data-test={undefined}
                >
                  <div
                    className="ModalFooter__StyledChild-bPOqEy jRvsYD"
                  >
                    <button
                      className="Button__StyledButton-jJDkJK jzykRp"
                      data-test={undefined}
                      disabled={undefined}
                      size="normal"
                      target={undefined}
                      type="button"
                    >
                      <div
                        className="Button__StyledButtonContent-gvDciI pDqSF"
                      >
                        <div
                          className="Button__IconContainer-bZYzaL lmwnCT"
                        >
                          <svg
                            className="Icon__StyledIcon-ckyxIP fvqkFf"
                            data-test={undefined}
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </div>
                        Back
                      </div>
                    </button>
                  </div>
                  <div
                    className="ModalFooter__StyledChild-bPOqEy xynvR"
                  >
                    <button
                      className="Button__StyledButton-jJDkJK jXpokS"
                      data-test={undefined}
                      disabled={undefined}
                      size="normal"
                      target={undefined}
                      type="button"
                    >
                      <div
                        className="Button__StyledButtonContent-gvDciI pDqSF"
                      >
                        Continue to Payment
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Modal
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClose
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onClose()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            size
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                normal
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            closable
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            fixedFooter
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                test
                                "
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ModalHeader
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Orbit design system
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            illustration
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Illustration /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            description
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Lorem ispum dolor sit amet
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            suppressed
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              suppressed
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span>
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#a11",
                                      }
                                    }
                                  >
                                    false
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              suppressed
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span>
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#a11",
                                      }
                                    }
                                  >
                                    false
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              suppressed
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span>
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#a11",
                                      }
                                    }
                                  >
                                    false
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalFooter
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              flex
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span>
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    [
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      "
                                      0 0 auto
                                      "
                                    </span>
                                    , 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      "
                                      1 1 100%
                                      "
                                    </span>
                                    ]
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Button
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    secondary
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                iconLeft
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span>
                                    {
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      &lt;ChevronLeft /&gt;
                                    </span>
                                    }
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Back
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Button
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Button
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                block
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Continue to Payment
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Button
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalFooter
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Modal
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Sizes 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Sizes
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Modal__ModalBody-jsvBud hzGqsV"
            data-test={undefined}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="0"
          >
            <div
              className="Modal__ModalWrapper-ioqsnS FaaEz"
              onScroll={[Function]}
              size="normal"
            >
              <div
                className="Modal__ModalWrapperContent-dXDxzA gTyJWw"
                size="normal"
              >
                <div
                  className="Modal__CloseContainer-ehEpyW cuWRmR"
                >
                  <button
                    className="ButtonLink__StyledButtonLink-eyUiPe DORaW"
                    data-test={undefined}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                    type="button"
                  >
                    <div
                      className="ButtonLink__IconContainer-flENJD hNEbcs"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-ckyxIP fvqkFf"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
                <div
                  className="ModalHeader__StyledModalHeader-hOPket dJFTgo"
                  data-test={undefined}
                >
                  <div
                    className="ModalHeader__ModalTitle-deoNop iOkEWH"
                  >
                    <h1
                      className="Heading__StyledHeading-gucmUp dqcIYA"
                      data-test={undefined}
                    >
                      Orbit design system
                    </h1>
                  </div>
                  <div
                    className="ModalHeader__StyledModalHeaderContent-ehrWSV eJcPbR"
                  >
                    I'm lovely description
                  </div>
                  <div
                    className="ModalHeader__MobileHeader-hyztNg htMJkr"
                  >
                    Orbit design system
                  </div>
                </div>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
                <section
                  className="ModalSection__StyledModalSection-bVxlGf kILnUb"
                  data-test={undefined}
                >
                  <p
                    className="Text__StyledText-guhEiE hYZMSR"
                    data-test={undefined}
                  >
                    You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                  </p>
                </section>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Modal
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onClose
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onClose()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            size
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                normal
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalHeader
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              title
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Orbit design system
                                  "
                                </span>
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 48,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          I'm lovely description
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalHeader
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ModalSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ModalSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Modal
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
